fix jumps content

--- a/src/css/filter_panels.css
+++ b/src/css/filter_panels.css
@@ -1,4 +1,5 @@
 .filter_panel {
+  min-height: 44px;
   margin-bottom: 20px;
 }
 @media screen and (min-width: 768px) {
